--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ hw.exporter.zigbee.ha/.classpath
 hw.exporter.zigbee.ha/.project
 hw.exporter.zigbee.ha/.settings
 hw.exporter.zigbee.ha/target
+pom/.project
+pom/.settings
