--- a/hw.exporter.zigbee.ha/pom.xml
+++ b/hw.exporter.zigbee.ha/pom.xml
@@ -70,6 +70,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.device.extra</artifactId>
+			<version>1.0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
