Removed zb4osgi as module so it is not tested in CI Hudson server

--- a/pom/pom.xml
+++ b/pom/pom.xml
@@ -13,7 +13,6 @@
   
   	<modules>
 		<module>../hw.exporter.zigbee.ha/</module>
-		<module>../zb4osgi/zb4osgi/</module>
 	</modules>
 
 	<scm>
@@ -46,7 +45,18 @@
 				<scope>import</scope>
 			</dependency>
 			<!-- ADD all Modules as Dependencies to be imported all at once -->
-
+			<dependency>
+				<groupId>org.universAAL.lddi</groupId>
+				<artifactId>hw.exporter.zigbee.ha</artifactId>
+				<version>1.0.1-SNAPSHOT</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>org.universAAL.support</groupId>
+				<artifactId>itests</artifactId>
+				<version>1.0.1-SNAPSHOT</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
