--- a/knx.networkdriver/pom.xml
+++ b/knx.networkdriver/pom.xml
@@ -65,7 +65,7 @@
 				<artifactId>maven-bundle-plugin</artifactId>
 				<version>2.3.6</version>
 				<extensions>true</extensions>
-				<executions>
+				<!-- <executions>
 					<execution>
 						<id>bundle-manifest</id>
 						<phase>process-classes</phase>
@@ -73,7 +73,7 @@
 							<goal>manifest</goal>
 						</goals>
 					</execution>
-				</executions>
+				</executions>-->
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
@@ -85,10 +85,10 @@
 					</instructions>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
-			</plugin>			
+			</plugin>	-->		
 		</plugins>
 	</build>
 </project>
