--- a/lddi.testing.frameworks/knx.framework/conf/services/org.ops4j.pax.logging.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/services/org.ops4j.pax.logging.properties
@@ -1,10 +1,20 @@
-log4j.rootLogger=INFO, RL
-log4j.appender.RL=org.apache.log4j.ConsoleAppender
-log4j.appender.RL.layout=org.apache.log4j.PatternLayout
-log4j.appender.RL.layout.ConversionPattern= %-10.10t [%d] %-5p - %m %n
+log4j.rootLogger=INFO, stdout, file
 
-log4j.logger.org.universAAL = DEBUG, uAAL
-log4j.appender.uAAL=org.apache.log4j.FileAppender
-log4j.appender.uAAL.File=log/uAAL.log
-log4j.appender.uAAL.layout=org.apache.log4j.PatternLayout
-log4j.appender.uAAL.layout.ConversionPattern= %-10.10t [%d] %-5p - %m %n
+## STD OUT
+##########
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern= %-10.10t [%p] %c - %m %n
+
+## FILE APPENDER
+################
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.File=log/uAAL.log
+log4j.appender.file.MaxFileSize=10240KB
+log4j.appender.file.MaxBackupIndex=10
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=[%p] %d{ISO8601} %c - %m%n
+
+
+log4j.logger.org.universAAL = DEBUG
+log4j.logger.it.polito.elite.domotics.dog2 = DEBUG
