--- a/lddi.testing.frameworks/knx.framework/conf/services/knx.networkdriver.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/services/knx.networkdriver.properties
@@ -1,15 +1,15 @@
 # NETWORK CONFIGURATION
 # ------------------------------
-# Time between two consecutive tests of the connection to the KNX gateway (house) - (at the beginning)
+# Time between two consecutive tests of the connection to the KNX gateway (at startup)
 sleepTime=10000
-# Time between two consecutive tests of the connection to the KNX gateway (house) - (after)
+# Time between two consecutive tests of the connection to the KNX gateway (after)
 checkingTime=10000
 timeoutTime=20000
 numTry=33
 # Network settings for KnxWriter
 # KNX gateway = house
-houseIp=192.168.60.110
-housePort=3671
+knxGatewayIp=192.168.60.110
+knxGatewayPort=3671
 #
 # Network settings for KnxReader
 # KNX multicast address is 224.0.23.12
