Registering KNX devices in OSGi registry

--- a/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
@@ -15,6 +15,9 @@ felix.auto.start.1 = \
 
 felix.auto.start.2 = file:lib/org.apache.felix.bundlerepository-1.4.2.jar
 felix.auto.start.2 = file:lib/org.apache.felix.configadmin-1.2.4.jar
+felix.auto.install.2 = file:lib/org.apache.felix.dependencymanager-3.0.0.jar
+
+felix.auto.install.3 = file:lib/org.osgi.compendium-4.2.0.jar
 
 felix.auto.start.3 = file:lib/pax-logging-api-1.4.jar
 felix.auto.start.4 = \
@@ -24,6 +27,9 @@ felix.auto.start.4 = \
 felix.auto.install.4 = file:lib/org.apache.felix.log-1.0.1.jar
 
 felix.auto.install.5 = file:lib/org.apache.felix.upnp.basedriver-0.8.0.jar
+
+felix.auto.start.6 = file:lib/org.apache.felix.devicemanager-0.9.0-SNAPSHOT.jar
+
 
 # universAAL
 ############
