--- a/knx.devicedrivers/knx.dpt1driver/pom.xml
+++ b/knx.devicedrivers/knx.dpt1driver/pom.xml
@@ -6,11 +6,11 @@
 		<relativePath>../pom/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>knx.devicemanager</artifactId>
+	<artifactId>knx.dpt1driver</artifactId>
 	<packaging>bundle</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>KNX device manager</name>
-	<description>This bundle reads KNX device configuration from XML files (exported by ETS4). A OSGI device service is registered in the framework for every KNX device.
+	<name>KNX driver for Datapoint Type 1.*</name>
+	<description>Encoding and decoding of KNX Datapoint Types 1.* with Format B1. Is registered as OSGI driver service in the framework registry.
 	</description>
 	<inceptionYear>2012</inceptionYear>
 
@@ -56,16 +56,15 @@
 			<scope>compile</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.jdom</groupId>
-			<artifactId>jdom</artifactId>
-			<version>1.1.3</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-
 		<!-- uAAL dependencies -->
 
+		<dependency>
+			<groupId>org.universAAL.lddi</groupId>
+			<artifactId>knxnetworkdriver</artifactId>
+			<version>0.0.1</version>
+			<type>bundle</type>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>knx.library</artifactId>
@@ -93,10 +92,10 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>org.universAAL.knx.devicemanager.Activator</Bundle-Activator>
+						<Bundle-Activator>org.universAAL.knx.dpt1driver.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>org.universAAL.knx.devicemanager</Export-Package>
+						<Export-Package>org.universAAL.knx.dpt1driver</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
