--- a/knx.library/pom.xml
+++ b/knx.library/pom.xml
@@ -6,11 +6,11 @@
 		<relativePath>../pom/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>knx.devicemanager</artifactId>
+	<artifactId>knx.library</artifactId>
 	<packaging>bundle</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>KNX device manager</name>
-	<description>This bundle reads KNX device configuration from XML files (exported by ETS4). A OSGI device service is registered in the framework for every KNX device.
+	<name>KNX Datapoint Type Library</name>
+	<description>KNX Device Categories for OSGi DeviceManager are Interfaces for all KNX Datapoint Types specifying methods for communication with device services.
 	</description>
 	<inceptionYear>2012</inceptionYear>
 
@@ -56,23 +56,8 @@
 			<scope>compile</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.jdom</groupId>
-			<artifactId>jdom</artifactId>
-			<version>1.1.3</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-
 		<!-- uAAL dependencies -->
 
-		<dependency>
-			<groupId>org.universAAL.lddi</groupId>
-			<artifactId>knx.library</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<type>bundle</type>
-			<scope>compile</scope>
-		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -81,22 +66,12 @@
 				<artifactId>maven-bundle-plugin</artifactId>
 				<version>2.3.6</version>
 				<extensions>true</extensions>
-				<executions>
-					<execution>
-						<id>bundle-manifest</id>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>manifest</goal>
-						</goals>
-					</execution>
-				</executions>
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>org.universAAL.knx.devicemanager.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>org.universAAL.knx.devicemanager</Export-Package>
+						<Export-Package>org.universAAL.knx.devicecategory</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
