--- a/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
@@ -65,8 +65,10 @@ felix.auto.install.31 = file:bundles/smp.activityhub.server.jar
 felix.auto.install.32 = file:bundles/smp.activityhub.client.jar
 
 # KNX bundles
-felix.auto.start.35 = file:bundles/knx.networkdriver.jar
-felix.auto.start.36 = file:bundles/knx.devicemanager.jar
+felix.auto.start.35 = file:bundles/knx.library.jar
+felix.auto.start.36 = file:bundles/knx.dpt1refinementdriver.jar
+felix.auto.start.37 = file:bundles/knx.networkdriver.jar
+felix.auto.install.38 = file:bundles/knx.devicemanager.jar
 
 
 ##############################
