--- a/knx.refinementdrivers/knx.dpt1refinementdriver/pom.xml
+++ b/knx.refinementdrivers/knx.dpt1refinementdriver/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>knx.dpt1refinementdriver</artifactId>
 	<packaging>bundle</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Refinement driver for KNX Datapoint Type 1.* to ISO 11073-10471 device</name>
+	<name>KNX Refinement driver for Datapoint Type 1.* to ISO 11073-10471 device</name>
 	<description>Encoding and decoding of KNX Datapoint Types 1.* with Format B1. Is registered as OSGI driver service in the framework registry. This refinement driver maps and creates a suitable device from ISO 11073-10471 specification and registers it in the OSGi registry.
 	</description>
 	<inceptionYear>2012</inceptionYear>
