--- a/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
@@ -30,6 +30,8 @@ felix.auto.install.5 = file:lib/org.apache.felix.upnp.basedriver-0.8.0.jar
 
 felix.auto.start.6 = file:lib/org.apache.felix.devicemanager-0.9.0-SNAPSHOT.jar
 
+felix.auto.start.9 = file:lib/org.apache.felix.http.jetty-2.2.0.jar
+felix.auto.start.10 = file:lib/org.apache.felix.webconsole-3.1.8.jar
 
 # universAAL
 ############
@@ -68,7 +70,7 @@ felix.auto.install.32 = file:bundles/smp.activityhub.client.jar
 felix.auto.start.35 = file:bundles/knx.library.jar
 felix.auto.start.36 = file:bundles/knx.dpt1refinementdriver.jar
 felix.auto.start.37 = file:bundles/knx.networkdriver.jar
-felix.auto.install.38 = file:bundles/knx.devicemanager.jar
+felix.auto.start.38 = file:bundles/knx.devicemanager.jar
 
 
 ##############################
