--- a/lddi.testing.frameworks/knx.framework/conf/services/org.ops4j.pax.logging.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/services/org.ops4j.pax.logging.properties
@@ -18,3 +18,5 @@ log4j.appender.file.layout.ConversionPattern=[%p] %d{ISO8601} %c - %m%n
 
 log4j.logger.org.universAAL = DEBUG
 log4j.logger.it.polito.elite.domotics.dog2 = DEBUG
+
+log4j.logger.org.universAAL.knx.dpt1refinementdriver = DEBUG
