added new refinementdriver and iso11073.library

--- a/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
@@ -67,18 +67,20 @@ felix.auto.install.31 = file:bundles/smp.activityhub.server.jar
 felix.auto.install.32 = file:bundles/smp.activityhub.client.jar
 
 # KNX bundles
-felix.auto.start.35 = file:bundles/knx.library.jar
-felix.auto.start.36 = file:bundles/knx.dpt1refinementdriver.jar
-felix.auto.start.37 = file:bundles/knx.networkdriver.jar
-felix.auto.start.38 = file:bundles/knx.devicemanager.jar
+felix.auto.install.35 = file:bundles/knx.library.jar
+felix.auto.install.36 = file:bundles/iso11073.library.jar
+felix.auto.start.37 = file:bundles/knx.dpt1refinementdriver.iso11073.jar
+felix.auto.start.38 = file:bundles/knx.networkdriver.jar
+felix.auto.install.39 = file:bundles/knx.devicemanager.jar
 
 
 ##############################
 # System settings
 ##############################
 
-### FELIX LOG LEVEL 1 DEFAULT, 4 DEBUG
-felix.log.level = 1
+### FELIX LOG LEVEL (1 ERROR, 2 WARNING, 3 INFO, 4 DEBUG)
+felix.log.level = 3
+felix.cm.loglevel = 3
 
 ### Specify the directory where felix should deploy its bundles
 org.osgi.framework.storage=rundir
