--- a/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
@@ -69,9 +69,12 @@ felix.auto.install.32 = file:bundles/smp.activityhub.client.jar
 # KNX bundles
 felix.auto.install.35 = file:bundles/knx.library.jar
 felix.auto.install.36 = file:bundles/iso11073.library.jar
-felix.auto.start.37 = file:bundles/knx.dpt1refinementdriver.iso11073.jar
-felix.auto.start.38 = file:bundles/knx.networkdriver.jar
-felix.auto.install.39 = file:bundles/knx.devicemanager.jar
+
+felix.auto.start.40 = file:bundles/knx.networkdriver.jar
+felix.auto.start.41 = file:bundles/knx.dpt1refinementdriver.iso11073.jar
+felix.auto.start.42 = file:bundles/hw.exporter.activityhub.jar
+
+felix.auto.install.50 = file:bundles/knx.devicemanager.jar
 
 
 ##############################
