--- a/lddi.testing.frameworks/knx.framework/pom.xml
+++ b/lddi.testing.frameworks/knx.framework/pom.xml
@@ -67,24 +67,32 @@
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.configadmin</artifactId>
 			<version>1.2.4</version>
-		</dependency>		
+		</dependency>	
 		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.dependencymanager</artifactId>
+			<version>3.0.0</version>
+		</dependency>	
+
+<!-- 		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.compendium</artifactId>
+			<version>4.2.0</version>
+		</dependency>
+ -->
+<!-- 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>osgi_R4_compendium</artifactId>
 			<version>1.0</version>
 			<scope>compile</scope>
 		</dependency>
-		<!--dependency>
+ -->		<!--dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.compendium</artifactId>
 			<version>1.4.0</version>
 		</dependency-->
-		<!--dependency>
-			<groupId>org.osgi</groupId>
-			<artifactId>org.osgi.compendium</artifactId>
-			<version>4.2.0</version>
-		</dependency-->
-		<dependency>
+		
+ 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.upnp.basedriver</artifactId>
 			<version>0.8.0</version>
@@ -93,7 +101,22 @@
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.log</artifactId>
 			<version>1.0.1</version>
-		</dependency>		
+		</dependency>	
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.devicemanager</artifactId>
+			<version>0.9.0-SNAPSHOT</version>		
+		</dependency>	
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.http.jetty</artifactId>
+			<version>2.2.0</version>		
+		</dependency>	
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.webconsole</artifactId>
+			<version>3.1.8</version>		
+		</dependency>	
 			 
 	<!-- PAX -->
 		<dependency>
@@ -143,7 +166,32 @@
 
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
+			<artifactId>knx.library</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.lddi</groupId>
+			<artifactId>iso11073.library</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>knx.networkdriver</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.lddi</groupId>
+			<artifactId>knx.dpt1refinementdriver.iso11073</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.lddi</groupId>
+			<artifactId>hw.exporter.activityhub</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.lddi</groupId>
+			<artifactId>knx.devicemanager</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		
