--- a/knx.refinementdrivers/knx.dpt1refinementdriver.iso11073/conf/factories/knx.dpt1refinementdriver.iso11073.properties
+++ b/knx.refinementdrivers/knx.dpt1refinementdriver.iso11073/conf/factories/knx.dpt1refinementdriver.iso11073.properties
@@ -4,22 +4,22 @@ instances=3
 keys=knxGroupAddress,isoDeviceType,deviceNature,sensorType2
 
 knxGroupAddress.1=0/0/1
-isoDeviceType.1=ISO11073_CONTACTCLOSURE
+isoDeviceType.1=ISO11073_SWITCHSENSOR
 deviceNature.1=open_close_sensor
 deviceType.1=BinaryInputDevice
 
 knxGroupAddress.2=0/0/2
-isoDeviceType.2=ISO11073_MOTIONSENSOR
+isoDeviceType.2=ISO11073_CONTACTCLOSURESENSOR
 deviceNature.2=motion_sensor
 deviceType.2=OccupancyDevice
 
 knxGroupAddress.3=1/1/1
-isoDeviceType.3=ISO11073_SWITCH
+isoDeviceType.3=ISO11073_MOTIONSENSOR
 deviceNature.3=on_off_switch_sensor
 deviceType.3=SwitchDevice
 
 #list of possible values for isoDeviceType:
-#ISO11073_CONTACTCLOSURE
+#ISO11073_CONTACTCLOSURESENSOR
 #ISO11073_MOTIONSENSOR
-#ISO11073_SWITCH
+#ISO11073_SWITCHSENSOR
 #...
