--- a/knx.refinementdrivers/knx.dpt1refinementdriver.iso11073/pom.xml
+++ b/knx.refinementdrivers/knx.dpt1refinementdriver.iso11073/pom.xml
@@ -2,8 +2,8 @@
 	<parent>
 		<groupId>org.universAAL.lddi</groupId>
 		<artifactId>lddi.pom</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
-		<relativePath>../../pom/pom.xml</relativePath>
+		<version>1.1.0</version>
+		<relativePath>../pom/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>knx.dpt1refinementdriver.iso11073</artifactId>
@@ -61,14 +61,14 @@
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>knx.networkdriver</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.2-SNAPSHOT</version>
 			<type>bundle</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>knx.library</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.2-SNAPSHOT</version>
 			<type>bundle</type>
 			<scope>compile</scope>
 		</dependency>
