update to middleware version 1.1.0

--- a/lddi.testing.frameworks/knx.framework/conf/services/org.ops4j.pax.logging.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/services/org.ops4j.pax.logging.properties
@@ -18,7 +18,8 @@ log4j.appender.file.layout.ConversionPattern=[%p] %d{ISO8601} %c - %m%n
 
 log4j.logger.org.universAAL = INFO
 log4j.logger.it.polito.elite.domotics.dog2 = INFO
-log4j.logger.org.universAAL.knx.dpt1refinementdriver = INFO
+log4j.logger.org.universAAL.knx.dpt1refinementdriver.iso11073 = DEBUG
+log4j.logger.org.universAAL.knx.networkdriver = DEBUG
 
 #seems this 2 lines are ignored!?
 log4j.logger.org.ops4j.pax.configmanager = INFO
