--- a/knx.library/pom.xml
+++ b/knx.library/pom.xml
@@ -8,7 +8,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>knx.library</artifactId>
 	<packaging>bundle</packaging>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<name>KNX Datapoint Type Library</name>
 	<description>KNX Device Categories for OSGi DeviceManager are Interfaces for all KNX Datapoint Types specifying methods for communication with device services.
 	</description>
@@ -71,7 +71,10 @@
 						<Bundle-Name>${project.name}</Bundle-Name>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>org.universAAL.knx.devicecategory,org.universAAL.knx.devicemodel,org.universAAL.knx.utils</Export-Package>
+						<Export-Package>org.universAAL.knx.devicecategory,
+						org.universAAL.knx.devicemodel,
+						org.universAAL.knx.networkdriver,
+						org.universAAL.knx.utils</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
