--- a/lddi.testing.frameworks/knx.framework/pom.xml
+++ b/lddi.testing.frameworks/knx.framework/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>org.universAAL.lddi.testingframework</groupId>
 	<artifactId>knx.framework</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>KNX Integration framework</name>
 	<description>This is the felix framework running the KNX hardware abstraction bundles. It's main purpose is to fetch all needed bundles from a maven repository and saves them in the dirs bundles (uAAL related bundles) and lib (thirdparty). uAAL middleware version used: 1.1.0</description>
@@ -45,6 +45,13 @@
 	<!-- Apache / OSGi -->
 		<dependency>
 			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.main</artifactId>
+			<version>1.8.1</version>
+			<type>bundle</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.bundlerepository</artifactId>
 			<version>1.4.2</version>
 		</dependency>
@@ -74,12 +81,12 @@
 			<version>3.0.0</version>
 		</dependency>	
 
-<!-- 		<dependency>
+ 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.compendium</artifactId>
 			<version>4.2.0</version>
 		</dependency>
- -->
+ 
 <!-- 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>osgi_R4_compendium</artifactId>
@@ -147,11 +154,11 @@
 		</dependency>
 		
 		
-	<!-- uAAL artifacts LDDI -->
+	<!-- uAAL artifacts LDDI --><!--
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.activityhub</artifactId>
-			<version>0.0.5</version>
+			<version>0.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
@@ -164,35 +171,35 @@
 			<version>0.0.1</version>
 		</dependency>
 
-		<dependency>
+		--><dependency>
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>knx.library</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
-		</dependency>
+			<version>0.0.3-SNAPSHOT</version>
+		</dependency><!--
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>iso11073.library</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+		--><dependency>
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>knx.networkdriver</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
-		</dependency>
+			<version>0.0.3-SNAPSHOT</version>
+		</dependency><!--
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>knx.dpt1refinementdriver.iso11073</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+		--><!--<dependency>
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>hw.exporter.activityhub</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+		--><dependency>
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>knx.devicemanager</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.3-SNAPSHOT</version>
 		</dependency>
 		
 		
@@ -307,7 +314,7 @@
 			<version>144</version>
 			<scope>compile</scope>
 		</dependency>
-			
+		
 	</dependencies>	
 
 	<build>
