--- a/pom/pom.xml
+++ b/pom/pom.xml
@@ -22,13 +22,13 @@
 	<!-- ______________________________________________________ -->
 	
 	<modules>
-		<module>../knx.networkdriver/</module>
-		<module>../knx.library/</module>
-		<module>../knx.refinementdrivers/knx.dpt1refinementdriver.iso11073/</module>
-		<module>../knx.devicemanager/</module>
-		<module>../iso11073.library/</module>
-		<module>../hw.exporter.activityhub/</module>
-		<module>../hw.exporter.zigbee.ha/</module>
+<!--		<module>../knx.networkdriver/</module>-->
+<!--		<module>../knx.library/</module>-->
+<!--		<module>../knx.refinementdrivers/knx.dpt1refinementdriver.iso11073/</module>-->
+<!--		<module>../knx.devicemanager/</module>-->
+<!--		<module>../iso11073.library/</module>-->
+<!--		<module>../hw.exporter.activityhub/</module>-->
+<!--		<module>../hw.exporter.zigbee.ha/</module>-->
 	</modules>
 
 	<properties>
