more decoupling of components message flow from knx bus - networkdriver - virt. device - device driver

--- a/knx.library/pom.xml
+++ b/knx.library/pom.xml
@@ -74,6 +74,7 @@
 						<Export-Package>org.universAAL.knx.devicecategory,
 						org.universAAL.knx.devicemodel,
 						org.universAAL.knx.networkdriver,
+						org.universAAL.knx.devicedriver,
 						org.universAAL.knx.utils</Export-Package>
 					</instructions>
 				</configuration>
