--- a/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
@@ -68,13 +68,13 @@ felix.auto.install.27 = file:bundles/smp.lighting.client.jar
 
 # KNX bundles
 felix.auto.install.35 = file:bundles/knx.library.jar
-#felix.auto.install.36 = file:bundles/iso11073.library.jar
+felix.auto.install.36 = file:bundles/iso11073.library.jar
 
 felix.auto.start.40 = file:bundles/knx.networkdriver.jar
-#felix.auto.start.41 = file:bundles/knx.dpt1refinementdriver.iso11073.jar
+felix.auto.start.41 = file:bundles/knx.dpt1refinementdriver.iso11073.jar
 #felix.auto.start.42 = file:bundles/hw.exporter.activityhub.jar
 
-felix.auto.install.50 = file:bundles/knx.devicemanager.jar
+felix.auto.start.50 = file:bundles/knx.devicemanager.jar
 
 
 ##############################
