Restructuring iso11073 library eventing works from knx bus up to ActivityHubBusServer (hw-exporter) next step: create ontology events

--- a/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
@@ -62,7 +62,7 @@ felix.auto.install.26 = file:bundles/smp.lighting.server.jar
 felix.auto.install.27 = file:bundles/smp.lighting.client.jar
 
 # ActivityHub bundles
-#felix.auto.start.30 = file:bundles/ont.activityhub.jar
+felix.auto.start.30 = file:bundles/ont.activityhub.jar
 #felix.auto.install.31 = file:bundles/smp.activityhub.server.jar
 #felix.auto.install.32 = file:bundles/smp.activityhub.client.jar
 
@@ -72,7 +72,7 @@ felix.auto.install.36 = file:bundles/iso11073.library.jar
 
 felix.auto.start.40 = file:bundles/knx.networkdriver.jar
 felix.auto.start.41 = file:bundles/knx.dpt1refinementdriver.iso11073.jar
-#felix.auto.start.42 = file:bundles/hw.exporter.activityhub.jar
+felix.auto.start.42 = file:bundles/hw.exporter.activityhub.jar
 
 felix.auto.start.50 = file:bundles/knx.devicemanager.jar
 
