register service "getAllActivityHubSensors" in uaal service bus. Tested with smp.activityhub.client register context event patterns and send context events on incoming knx packets from hardware sensors. Tested with smp.activityhub.client

--- a/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
@@ -26,7 +26,7 @@ felix.auto.start.4 = \
 
 felix.auto.install.4 = file:lib/org.apache.felix.log-1.0.1.jar
 
-felix.auto.install.5 = file:lib/org.apache.felix.upnp.basedriver-0.8.0.jar
+felix.auto.start.5 = file:lib/org.apache.felix.upnp.basedriver-0.8.0.jar
 
 felix.auto.start.6 = file:lib/org.apache.felix.devicemanager-0.9.0-SNAPSHOT.jar
 
@@ -42,7 +42,7 @@ felix.auto.start.16 = file:bundles/mw.container.osgi.jar
 
 felix.auto.start.17 = file:bundles/mw.acl.interfaces.jar
 
-felix.auto.install.18 = file:bundles/mw.acl.upnp.jar
+felix.auto.start.18 = file:bundles/mw.acl.upnp.jar
 
 felix.auto.start.19 = file:bundles/mw.bus.model.jar
 	
@@ -64,7 +64,7 @@ felix.auto.install.27 = file:bundles/smp.lighting.client.jar
 # ActivityHub bundles
 felix.auto.start.30 = file:bundles/ont.activityhub.jar
 #felix.auto.install.31 = file:bundles/smp.activityhub.server.jar
-#felix.auto.install.32 = file:bundles/smp.activityhub.client.jar
+felix.auto.install.32 = file:bundles/smp.activityhub.client.jar
 
 # KNX bundles
 felix.auto.install.35 = file:bundles/knx.library.jar
