--- a/lddi.testing.frameworks/knx.framework/pom.xml
+++ b/lddi.testing.frameworks/knx.framework/pom.xml
@@ -164,12 +164,12 @@
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>smp.activityhub.server</artifactId>
 			<version>0.0.4</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>smp.activityhub.client</artifactId>
-			<version>0.0.1</version>
-		</dependency>-->
+			<version>0.0.3-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
