--- a/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
+++ b/lddi.testing.frameworks/knx.framework/conf/felix.client.run.properties
@@ -72,7 +72,7 @@ felix.auto.install.36 = file:bundles/iso11073.library.jar
 
 felix.auto.start.40 = file:bundles/knx.networkdriver.jar
 felix.auto.start.41 = file:bundles/knx.dpt1refinementdriver.iso11073.jar
-felix.auto.start.42 = file:bundles/hw.exporter.activityhub.jar
+felix.auto.install.42 = file:bundles/hw.exporter.activityhub.jar
 
 felix.auto.start.50 = file:bundles/knx.devicemanager.jar
 
