--- a/lddi.testing.frameworks/knx.framework/pom.xml
+++ b/lddi.testing.frameworks/knx.framework/pom.xml
@@ -158,7 +158,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.activityhub</artifactId>
-			<version>0.0.5</version>
+			<version>0.0.5-SNAPSHOT</version>
 		</dependency>
 		<!--<dependency>
 			<groupId>org.universAAL.lddi</groupId>
