--- a/knx.refinementdrivers/knx.dpt1refinementdriver.iso11073/pom.xml
+++ b/knx.refinementdrivers/knx.dpt1refinementdriver.iso11073/pom.xml
@@ -3,7 +3,7 @@
 		<groupId>org.universAAL.lddi</groupId>
 		<artifactId>lddi.pom</artifactId>
 		<version>1.1.0</version>
-		<relativePath>../pom/pom.xml</relativePath>
+		<relativePath>../../pom/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>knx.dpt1refinementdriver.iso11073</artifactId>
